[build-system]
requires = ["hatchling>=1.11.0"]
build-backend = "hatchling.build"

[project]
name = "lsports"
version = "0.1.0"
description = "List serial ports."
authors = [
  {name="Ali Hamdan", email="ali.hamdan.dev@gmail.com"},
]
readme = "README.md"
license = "MIT"
license-files = {globs=["LICENSE", "licenses/*"]}
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
keywords = ["serial", "lsports", "list-ports", "USB", "COM"]
dependencies = []
requires-python = ">=3.8"
urls.Home = "https://github.com/hamdanal/lsports"

[tool.hatch]
build.packages = ["lsports"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38,py39,py310,py311,py312
skip_missing_interpreters = true
[testenv]
deps =
  pytest
commands =
  pytest {posargs}
"""

[tool.ruff]
line-length = 100
extend-select = ["E", "F", "C", "B", "UP", "RUF100", "TID", "T10"]
unfixable = ["B"]
extend-ignore = ["E501", "C901"]
isort.required-imports = ["from __future__ import annotations"]
flake8-tidy-imports.ban-relative-imports = "all"

[tool.ruff.extend-per-file-ignores]
"lsports/_windows.py" = ["E221", "E402"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["tests.*"]
check_untyped_defs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
